<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/server_host_label"/>

        <EditText android:id="@+id/server_host_input"
                  android:layout_width="245dp"
                  android:layout_height="wrap_content"
                  android:inputType="text"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingStart="3dp"
                  android:paddingLeft="3dp"
                  android:paddingEnd="0dp"
                  android:paddingRight="0dp">

        <TextView android:id="@+id/textView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/server_port_label"/>

        <EditText android:id="@+id/server_port_input"
                  android:layout_width="245dp"
                  android:layout_height="wrap_content"
                  android:inputType="text"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingStart="10dp"
                  android:paddingLeft="10dp"
                  android:paddingEnd="0dp"
                  android:paddingRight="0dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/username_label"/>

        <EditText android:id="@+id/username_input"
                  android:layout_width="245dp"
                  android:layout_height="wrap_content"
                  android:inputType="text"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingStart="12dp"
                  android:paddingLeft="12dp"
                  android:paddingEnd="0dp"
                  android:paddingRight="0dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/password_label"/>

        <EditText android:id="@+id/password_input"
                  android:layout_width="245dp"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingStart="6dp"
                  android:paddingLeft="6dp"
                  android:paddingEnd="0dp"
                  android:paddingRight="0dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/first_name_label"/>

        <EditText android:id="@+id/first_name_input"
                  android:layout_width="245dp"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingStart="6dp"
                  android:paddingLeft="6dp"
                  android:paddingEnd="0dp"
                  android:paddingRight="0dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/last_name_label"/>

        <EditText android:id="@+id/last_name_input"
                  android:layout_width="245dp"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingStart="39dp"
                  android:paddingLeft="39dp"
                  android:paddingEnd="0dp"
                  android:paddingRight="0dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/email_label"/>

        <EditText android:id="@+id/email_input"
                  android:layout_width="245dp"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingStart="28dp"
                  android:paddingLeft="28dp"
                  android:paddingEnd="0dp"
                  android:paddingRight="0dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="10dp"
                  android:text="@string/gender_label"/>

        <RadioGroup android:id="@+id/gender_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="2dp">

            <RadioButton android:id="@+id/male_radio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/male_radio"/>

            <RadioButton android:id="@+id/female_radio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/female_radio"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="10dp"
                  android:layout_marginStart="90dp"
                  android:layout_marginLeft="90dp">

        <Button android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"/>

        <Button android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"/>

    </LinearLayout>

</LinearLayout>