<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_first"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            style="@style/SettingsMainText"/>

        <TextView
            style="@style/SettingsSubText"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:text="@string/person_first"/>

    </LinearLayout>

    <View
        style="@style/Divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_last"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            style="@style/SettingsMainText"/>

        <TextView
            style="@style/SettingsSubText"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:text="@string/person_last"/>

    </LinearLayout>

    <View
        style="@style/Divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_gender"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            style="@style/SettingsMainText"/>

        <TextView
            style="@style/SettingsSubText"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:text="@string/person_gender"/>

    </LinearLayout>

    <View
        style="@style/Divider"/>

        <ExpandableListView
            android:id="@+id/person_exlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


</LinearLayout>
